--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
+title: Jingyu-Sun's Homepage
+page-top-title: Stone Sun
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+home-subtitle: Jingyu Sun&ensp;|&ensp;Stone
+copyright-text: '&copy; Jingyu Sun 2025. All Rights Reserved.'
