--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Jingyu-Sun's Homepage
 page-top-title: Stone Sun
-top-section-bg-text: Be what you wanna be
-home-subtitle: Jingyu Sun&ensp;|&ensp;Stone
+top-section-bg-text: Always Learning
+home-subtitle: About Me
 copyright-text: '&copy; Jingyu Sun 2025. All Rights Reserved.'
